...

internal const val PROP_NAME_TAG = "prop_name"
internal const val PROP_SIZE_TAG = "prop_size"
internal const val PROP_PICTURE_TAG = "prop_picture"
internal const val PROP_TEXT_TAG = "prop_text"
internal const val PROP_COUNTDOWN_TAG = "prop_countdown"
internal const val PROP_ADD_TAG = "prop_add"
internal const val PROP_SAVE_TAG = "prop_save"

internal fun propSwitchTag(id: String) = "prop_switch_$id"

internal fun propEditTag(id: String) = "prop_edit_$id"

internal fun propKindTag(kind: PropKind) = "prop_kind_${kind.name}"
...
